Add global escalation incidents
